# crunchnarr

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICES.md  PLAN_watchlist.md  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml  docker.yml
crunchy-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.api
crunchy-cli/.cargo/: config.toml
crunchy-cli/crates/api/: Cargo.toml
crunchy-cli/crates/api/src/: config.rs  docs.rs  error.rs  lib.rs  main.rs  state.rs
crunchy-cli/crates/api/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs
crunchy-cli/crates/api/src/db/: api_keys.rs  app_settings.rs  auth.rs  bookmarks.rs  mod.rs  tracking.rs  users.rs
crunchy-cli/crates/api/src/db/migrations/: 001_initial.sql  002_user_settings.sql  003_download_thumbnail.sql  004_download_publish_failed.sql  005_api_keys.sql  006_drop_download_queue.sql  007_bookmarks.sql  008_tracking.sql  009_downloads_tracking_columns.sql  010_downloads_manual.sql  011_app_settings.sql
crunchy-cli/crates/api/src/routes/: api_keys.rs  app_settings.rs  auth.rs  bookmarks.rs  cache.rs  config.rs  content.rs  crunchyroll.rs  downloads.rs  mod.rs  search.rs  tracking.rs  ws.rs
crunchy-cli/crates/api/src/services/: crunchyroll.rs  db_token_store.rs  download.rs  mod.rs  s3_sink.rs  storage_config.rs  storage_secrets.rs  tracking.rs  ws.rs
crunchy-cli/crates/widevine/: Cargo.toml
crunchy-cli/crates/widevine-proto/: Cargo.toml  build.rs
crunchy-cli/crates/widevine-proto/src/: lib.rs
crunchy-cli/crates/widevine/src/: cdm.rs  device.rs  error.rs  key.rs  lib.rs  mp4.rs  pssh.rs
crunchy-cli/src/: error.rs  lib.rs  main.rs
crunchy-cli/src/api/: auth.rs  client.rs  content.rs  mod.rs  playback.rs  throttle.rs  token_store.rs  types.rs
crunchy-cli/src/cli/: commands.rs  filter.rs  mod.rs  url_parser.rs
crunchy-cli/src/config/: display.rs  mod.rs
crunchy-cli/src/download/: cache.rs  manager.rs  manifest.rs  mod.rs  progress.rs  resolve.rs  segment.rs  selector.rs  throttle.rs
crunchy-cli/src/media/: ffmpeg.rs  filename.rs  keycrak.rs  mod.rs  mp4decrypt.rs  subtitles.rs  tools.rs
crunchy-cli/src/queue/: manager.rs  mod.rs  storage.rs  types.rs
crunchy-cli/src/storage/: local.rs  mod.rs  sink.rs
crunchy-cli/src/utils/: languages.rs  mod.rs  range.rs  tree.rs
crunchy-web/: Dockerfile  components.json  package.json  tsconfig.json
crunchy-web/app/: globals.css  layout.tsx
crunchy-web/app/(auth)/: layout.tsx
crunchy-web/app/(protected)/: layout.tsx  page.tsx
crunchy-web/components/account/: avatar-picker.tsx  crunchyroll-section.tsx  profile-section.tsx  unlink-confirmation-dialog.tsx
crunchy-web/components/bookmarks/: bookmark-button.tsx  bookmark-card.tsx
crunchy-web/components/cache/: cache-entries-table.tsx  cache-summary-card.tsx  clean-cache-dialog.tsx
crunchy-web/components/crunchyroll/: link-account-card.tsx  link-banner.tsx
crunchy-web/components/dashboard/: active-downloads-section.tsx  metric-cards.tsx  recent-activity.tsx
crunchy-web/components/downloads/: download-actions.tsx  download-button.tsx  download-options-dialog.tsx  download-progress-bar.tsx  download-series-button.tsx  download-speed-indicator.tsx  download-status-badge.tsx  downloads-table.tsx
crunchy-web/components/episode/: audio-subtitle-badges.tsx  (+1 more)
crunchy-web/hooks/: use-api-keys.ts  use-app-settings.ts  use-auth.ts  use-avatar.ts  use-bookmarks.ts  use-cache.ts  use-config.ts  use-crunchyroll.ts  use-download-notifications.ts  use-download-progress.ts  use-downloads.ts  use-query.ts  use-search.ts  use-series.ts  use-tracking.ts  use-user.ts  use-websocket.ts
crunchy-web/lib/: auth-paths.ts  avatars.tsx  format.ts  image-helpers.ts  languages.ts
crunchy-web/types/: api.ts  crunchyroll.ts  download-options.ts  downloads.ts  websocket.ts
docs/design/: PLAN_api_keys.md  PLAN_bookmarks.md  PLAN_download_options.md
docs/launch/: r-animepiracy.md  r-datahoarder.md  r-selfhosted.md
(+87 files in other folders)
