[package]
name = "crunchy-api"
version = "0.1.0"
edition = "2021"
description = "REST + WebSocket API server for crunchy-cli"

[[bin]]
name = "crunchy-api"
path = "src/main.rs"

[dependencies]
# Root library crate
crunchy-cli = { path = "../.." }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
tokio-util = "0.7"
async-trait = "0.1"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Misc
dirs = "5"
anyhow = "1"
base64 = "0.22"
hex = "0.4"
ring = "0.17"
tempfile = "3"

# S3-compatible storage backend (aws-sdk-s3 supports custom endpoints for
# MinIO / Cloudflare R2 / Backblaze B2 etc.)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
