[package]
name = "widevine"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
aes = "0.8"
byteorder = "1.0"
cbc = { version = "0.1", features = ["alloc"] }
cmac = "0.7"
data-encoding = "2.5"
hmac = "0.12"
num-derive = "0.4"
num-traits = "0.2"
protobuf = "3.5"
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive"], optional = true }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
log = "0.4"
widevine-proto = { path = "../widevine-proto" }

[dev-dependencies]
path_macro = "1.0"
temp_testdir = "0.2"
